@@ -12,6 +12,12 @@
   grid-row: 1 / 5;
 }
 
+.gp__header-left span {
+  font-size: 108px;
+  line-height: 108px;
+  float: left;
+}
+
 .gp__header-right {
   grid-column: 3 / 5;
   grid-row: 1 / 3;
@@ -36,9 +42,20 @@
 }
 
 .gp__header-text {
-  font-size: 72px;
+  font-size: 80px;
+  word-spacing: 0.05rem;
 }
 
 .gp__shopping-text {
   color: #00a4ff;
+  margin-top: 0;
+}
+
+.gp__header-list li {
+  font-size: 108px;
+  list-style: none;
+}
+
+.gp__addr-search {
+  width: 80%;
 }
