@@ -1,10 +1,15 @@
 <gp-topnavbar class="vw-100">Loading...</gp-topnavbar>
 
-<!-- Could not figure out how to use bootstraps grid for this scenario -->
+<!-- Header (could not figure out how to use bootstraps grid for this scenario) -->
 <div class="gp__header-wrapper overflow-hidden">
-    <div class="gp__header-left vh-100">
-        <!-- Text -->
-        <!-- Search Bar -->
+    <div class="gp__header-left vh-100 d-flex flex-column justify-content-center align-items-center">
+        <div class="d-flex flex-column fw-bolder">
+            <span>Daily</span>
+            <span>essentials</span>
+            <span>delivered in</span>
+            <span>minutes.</span>
+        </div>
+        <gp-header-address-search class="gp__addr-search mb-4">Loading...</gp-header-address-search>
     </div>
 
 
@@ -30,14 +35,16 @@
     <p class="gp__info-text">*Not guaranteed; average delivery time.</p>
 </div>
 
+
+<!-- Category Cards -->
 <div class="d-flex justify-content-center pt-4">
     <p class="fw-bolder gp__header-text">Browse A Popular Category</p>
 </div>
-
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-0">
     <a routerLink="categories" class="text-decoration-none gp__shopping-text fs-4 fw-bold">Start Shopping →</a>
 </div>
-<!-- Category Cards -->
+
+
 <div class="container-fluid d-flex flex-center my-3 flex-wrap">
     <div *ngFor="let catCard of catCards" class="m-3">
         <a routerLink="store" class="text-dark fw-bold text-decoration-none">
@@ -46,4 +53,5 @@
     </div>
 </div>
 
+<!-- Bottom Nav -->
 <gp-bottomnavbar>Loading...</gp-bottomnavbar>
