@@ -1,0 +1,27 @@
+.wrapper:focus-within {
+  outline: 3px solid #000;
+}
+
+.wrapper:hover {
+  outline: 3px solid #000;
+}
+
+.gp__addr-input {
+  width: 100%;
+  border: none;
+}
+
+.btn {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: black;
+}
+
+.gp__addr-input:focus {
+  outline: none;
+}
+
+.btn:hover {
+  background-color: #4d4d4d;
+}
