@@ -1,0 +1,13 @@
+<div class="wrapper d-flex bg-white p-2 w-100 justify-content-between align-items-center px-3 mt-4">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" size="1.5x" class="">
+        <path fill="black"
+            d="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,10 7,12 12,18.71C17,12 17,10 17,9A5,5 0 0,0 12,4Z">
+        </path>
+    </svg>
+    <input type="text" class="gp__addr-input ps-3" placeholder="Enter delivery address">
+    <button class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" size="1.5x"
+            class="justify-content-center">
+            <path fill="white" d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z">
+            </path>
+        </svg></button>
+</div>
