@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'gp-header-address-search',
+  templateUrl: './header-address-search.component.html',
+  styleUrls: ['./header-address-search.component.css']
+})
+export class HeaderAddressSearchComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
